--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  go_router: ^13.2.0
+  flutter_riverpod: ^2.4.10 
+  riverpod_annotation: ^2.3.4
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner:
+  custom_lint:
+  riverpod_generator: ^2.3.11
+  riverpod_lint: ^2.3.9
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
